Add support for (manual) Achievement tracking from other Gacha games like WuWa and HSR #585

--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -598,7 +598,7 @@
                             <Expander.Header>
                                 <Grid>
                                     <CheckBox IsChecked="{Binding Settings.EnableGenshinImpact}" VerticalAlignment="Center">
-                                        <Label Content="{DynamicResource LOCSEnableGenshinImpactAchievements}" />
+                                        <Label Content="{DynamicResource LOCEnableGenshinImpactAchievements}" />
                                     </CheckBox>
                                 </Grid>
                             </Expander.Header>
@@ -614,13 +614,27 @@
                             <Expander.Header>
                                 <Grid>
                                     <CheckBox IsChecked="{Binding Settings.EnableWutheringWaves}" VerticalAlignment="Center">
-                                        <Label Content="{DynamicResource LOCSEnableWutheringWavesAchievements}" />
+                                        <Label Content="{DynamicResource LOCEnableWutheringWavesAchievements}" />
                                     </CheckBox>
                                 </Grid>
                             </Expander.Header>
                         </Expander>
 
+                        <Expander AttachedProperties:ExpanderAttachedProperties.HideExpanderArrow="True" Margin="0,10,0,0">
+                            <Expander.Style>
+                                <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Style>
+                            </Expander.Style>
 
+                            <Expander.Header>
+                                <Grid>
+                                    <CheckBox IsChecked="{Binding Settings.EnableHonkaiStarRail}" VerticalAlignment="Center">
+                                        <Label Content="{DynamicResource LOCEnableHonkaiStarRailAchievements}" />
+                                    </CheckBox>
+                                </Grid>
+                            </Expander.Header>
+                        </Expander>
 
                         <Expander Margin="0,10,0,0">
                             <Expander.Style>
