--- a/source/Views/SuccessStorySettingsView.xaml
+++ b/source/Views/SuccessStorySettingsView.xaml
@@ -636,6 +636,22 @@
                             </Expander.Header>
                         </Expander>
 
+                        <Expander AttachedProperties:ExpanderAttachedProperties.HideExpanderArrow="True" Margin="0,10,0,0">
+                            <Expander.Style>
+                                <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Style>
+                            </Expander.Style>
+
+                            <Expander.Header>
+                                <Grid>
+                                    <CheckBox IsChecked="{Binding Settings.EnableZenlessZoneZero}" VerticalAlignment="Center">
+                                        <Label Content="{DynamicResource LOCEnableZenlessZoneZeroAchievements}" />
+                                    </CheckBox>
+                                </Grid>
+                            </Expander.Header>
+                        </Expander>
+
                         <Expander Margin="0,10,0,0">
                             <Expander.Style>
                                 <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
