--- a/source/Views/SuccessStoryOneGameView.xaml
+++ b/source/Views/SuccessStoryOneGameView.xaml
@@ -62,6 +62,8 @@
                                Text="{Binding GameContext.Name, FallbackValue='Game Name'}"
                                FontSize="{DynamicResource FontSizeLargest}" TextWrapping="Wrap"
                                Foreground="{DynamicResource TextBrush}" />
+                    <Button Content="&#xefd1;" Click="ButtonRefresh_Click" HorizontalAlignment="Right" Grid.ColumnSpan="3"
+                            Name="ButtonRefresh" FontFamily="{DynamicResource FontIcoFont}" Tag="{Binding GameContext.Id}" />
 
                     <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" Visibility="{Binding FirstUnlock, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}}">
                         <TextBlock Text="{DynamicResource LOCSuccessStoryFirstUnlock}" Foreground="{DynamicResource TextBrush}" FontWeight="Bold" />
@@ -183,6 +185,12 @@
                     </Hyperlink>
                 </TextBlock>
             </Grid>
+
+            <StackPanel Grid.Row="6" Margin="0,10,0,0" Orientation="Horizontal" HorizontalAlignment="Right"
+                        Visibility="{Binding DateLastRefresh, Converter={StaticResource StringNullOrEmptyToVisibilityConverter}}">
+                <Label FontSize="8" Content="Last refresh" />
+                <Label FontSize="8" Content="{Binding DateLastRefresh}" Margin="10,0,0,0" />
+            </StackPanel>
         </Grid>
     </Grid>
 </UserControl>
